--- a/App/templates/ographs.html
+++ b/App/templates/ographs.html
@@ -31,6 +31,8 @@
           </ul>
         </div>
       </div>
+      <span>Hello,{{ request.user }}</span>
+      <span class="ms-3 me-3"><a href="/app/logout"><button class="btn btn-danger">Logout</button></a></span>
   </nav>
 
 
