--- a/App/templates/home.html
+++ b/App/templates/home.html
@@ -14,25 +14,25 @@
 </head>
 <body class="light">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark text-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="">App</a>
+        <a class="navbar-brand text-light" href="">App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Home</a>
+              <a class="nav-link text-light" href="">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="graphs/">Over-All-Graphs</a>
+              <a class="nav-link text-light" href="graphs/">Over-All-Graphs</a>
             </li>
           </ul>
+          <span>Hello,{{ request.user }}</span>
+          <span class="ms-3 me-3"><a href="/app/logout"><button class="btn btn-danger">Logout</button></a></span>
         </div>
       </div>
-      <span>Hello,{{ request.user }}</span>
-      <span class="ms-3 me-3"><a href="/app/logout"><button class="btn btn-danger">Logout</button></a></span>
   </nav>
 
   <div class="container">
