--- a/App/templates/ographs.html
+++ b/App/templates/ographs.html
@@ -10,29 +10,30 @@
     <script src="{% static 'js/ographs.js' %}" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <link rel="stylesheet" href="{% static 'css/ograph.css' %}">
     <title>App</title>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark text-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="">App</a>
+        <a class="navbar-brand text-light" href="">App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/app">Home</a>
+              <a class="nav-link text-light" href="/app">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Over-All-Graphs</a>
+              <a class="nav-link text-light" href="">Over-All-Graphs</a>
             </li>
           </ul>
+          <span>Hello,{{ request.user }}</span>
+          <span class="ms-3 me-3"><a href="/app/logout"><button class="btn btn-danger">Logout</button></a></span>
         </div>
       </div>
-      <span>Hello,{{ request.user }}</span>
-      <span class="ms-3 me-3"><a href="/app/logout"><button class="btn btn-danger">Logout</button></a></span>
   </nav>
 
 
