--- a/static/css/ograph.css
+++ b/static/css/ograph.css
@@ -3,7 +3,7 @@ html {
     margin: 0;
     padding: 0;
     width: 100%;
-    background-image: url("../img/graph.jpg") !important;
+    background-color: #ffc107 !important;
     background-repeat: no-repeat;
     background-size: cover;
 }
